<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/black">

    <TableRow
        android:background="#808080"
        android:layout_height="30dp"

        android:layout_width="match_parent">

        <TextView
            android:layout_width="0dp"
            android:layout_marginStart="5dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:gravity="center_vertical|start"
            android:text="@string/hello"
            android:textSize="15sp"
            android:textColor="@color/white"/>

    </TableRow>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text=""/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|start"
            android:textColor="@color/white"
            android:text="@string/open">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            android:text="@string/ctrlo">
        </TextView>

    </TableRow>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text=""/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|start"
            android:textColor="@color/white"
            android:text="@string/save">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            android:text="@string/ctrls">
        </TextView>
    </TableRow>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text=""/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|start"
            android:textColor="@color/white"
            android:text="@string/saveas">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            android:text="@string/ctrlshs">
        </TextView>
    </TableRow>

    <View android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#333333"
        >
    </View>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/x"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|start"
            android:textColor="@color/white"
            android:text="@string/imp">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|end"
            android:text="">
        </TextView>
    </TableRow>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/x"/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|start"
            android:text="@string/exp">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|end"
            android:textColor="@color/white"
            android:text="@string/ctrle">
        </TextView>
    </TableRow>

    <View android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="#333333"
        >
    </View>

    <TableRow
        android:layout_height="35dp"
        android:layout_width="match_parent">
        <TextView
            android:layout_height="30dp"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text=""/>
        <TextView
            android:layout_marginStart="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical|start"
            android:textColor="@color/white"
            android:text="@string/quit">
        </TextView>
        <TextView
            android:layout_marginEnd="5dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center_vertical|end"
            android:text="">
        </TextView>
    </TableRow>

</TableLayout>