<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/big_box1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/border"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/box2"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv1"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/space_station_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv1"
                app:layout_constraintVertical_chainStyle="packed">
            </ImageView>
            <TextView
                android:id="@+id/tv1"
                android:layout_height="20dp"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv1"
                android:gravity="center"
                android:text="@string/space_station">

            </TextView>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toEndOf="@id/box1"
            app:layout_constraintEnd_toStartOf="@id/box3"
            app:layout_constraintTop_toTopOf="@id/box1">

            <ImageView
                android:id="@+id/iv2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rocket_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv2"
                app:layout_constraintVertical_chainStyle="packed">
            </ImageView>
            <TextView
                android:id="@+id/tv2"
                android:layout_height="20dp"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv2"
                android:gravity="center"
                android:text="@string/flights">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toEndOf="@id/box2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/box1"
            >

            <ImageView
                android:id="@+id/iv3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/rover_icon"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv3"
                app:layout_constraintVertical_chainStyle="packed">
            </ImageView>
            <TextView
                android:id="@+id/tv3"
                android:layout_height="20dp"
                android:layout_width="match_parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv3"
                android:gravity="center"
                android:text="@string/rovers">

            </TextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/big_box2"
        app:layout_constraintTop_toBottomOf="@id/big_box1"
        android:layout_width="match_parent"
        android:layout_height="150dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/double_arrows"
            android:elevation="10dp">

        </ImageView>

        <TextView
            android:id="@+id/tv4"
            android:layout_width="130dp"
            android:layout_height="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv5"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginEnd="30dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/dca"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>
        <TextView
            android:id="@+id/tv5"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="130dp"
            android:layout_height="100dp"
            android:background="#4CAF50"
            android:gravity="center"
            android:text="@string/mars"
            android:textColor="@color/white"
            android:textSize="20sp">

        </TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv6"
        android:layout_width="180dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/big_box2"
        app:layout_constraintBottom_toTopOf="@id/tv7"
        android:layout_marginStart="30dp"
        android:text="One Way"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="#F57C00">

    </TextView>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv6"
        app:layout_constraintTop_toTopOf="@id/tv6"
        app:layout_constraintBottom_toBottomOf="@id/tv6"/>
    <TextView
        android:id="@+id/tv7"
        android:layout_width="90dp"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv6"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="1 Traveller"
        android:gravity="center_vertical"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:paddingStart="10dp"
        android:background="#F57C00">

    </TextView>

    <ImageView
        android:id="@+id/iv4"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:src="@drawable/galaxy"
        app:layout_constraintTop_toBottomOf="@id/big_box2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_bottom"
        >

    </ImageView>

    <ImageView
        android:id="@+id/iv5"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:src="@drawable/rocket_icon"
        app:layout_constraintTop_toBottomOf="@id/big_box2"
        app:layout_constraintEnd_toStartOf="@id/iv4"
        app:layout_constraintBottom_toTopOf="@id/tv_bottom"
        android:layout_marginEnd="24dp"
        >

    </ImageView>

    <TextView
        android:id="@+id/tv_bottom"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:background="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="DEPART"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:gravity="center">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>